kubernetes-networks/canary/web-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-canary-svc
  namespace: web-canary
spec:
  selector:
    app: web
  type: ClusterIP
  #clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
