kubernetes-networks/canary/web-canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: web-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Canary"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: zav.k8s.local
    http:
      paths:
      - path: /web/
        backend:
          serviceName: web-canary-svc
          servicePort: 8000
